# seedcollection

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  Dockerfile  LICENSE-MIT  Makefile  README.md  config.yaml  config.yaml.docker  config.yaml.example  package.json
.cargo/: config.toml
.github/workflows/: main.yml  publish-container.yml
.sqlx/: query-0492b8f4e422cb564ac2a3b804d95b6bd9d7cb235818b17a29e19919d5b51783.json  query-1c86f838a1519a5daad7c2b2963f6303a5d4fdb21c2ebd0b0dc1ee614b7f2dc1.json  query-242cd79221d94e3890f230952765f8d2b347337c6feef4f16c8d15dcf154193f.json  query-2caaf383fc7c58565a79f7cb970a3f411556a99527e311e4534e82c4c2b37d4c.json  query-4059ebe3e705def4cd74bc1b030bc0e6f83076a574cd78409124dea4b52f2116.json  query-4d53e7dea3d2852c61a0541d39f06ff0a7675f94b1fe3f0fe75d892d29355390.json  query-5b18ab081a0103fe35e6bac761aa9f743b5f64c78234393203924b8b7b7fff4d.json  query-6f1df5963a3e8f9b4cb944224bddb6869c8d414af4479f7119026e91f3134f45.json  query-7a41a46e919247ef0d47d873fb561c23ce7bc22ea66d6fea9d31994b1d2add0a.json  query-9d03ab04f1afd7d666aa46949afe1d3ab3e442eecf5772cc735c3518d29dae2e.json  query-ae2ec5504d36abd969ebda8148591c6a32c8402a29db6a18d4065d3b1bb94b0b.json  query-d2af36170b78f00bddf37a290e6f36aa92344457a49dc7e5ee5648a4a17d61ff.json  query-e5c50d64c0c0096142f25b19eb8fbe8d8ff69e9cd4fbb823c6e5b03186e1fc3a.json
certs/: README  README.md
db/fixtures/: assigned-samples.sql  csnotes.sql  hierarchy.sql  locations.sql  non-plant-taxa.sql  projects.sql  samples.sql  taxa.sql  user-verifications.sql  users.sql
db/germination/: gen-sql.py  germination-data.csv
db/itis/: README  match-species.py  minnesota-native-status.csv  trim-itis-database.sql
db/migrations/: 0004_Change_location_geo_column_types.sql  0005_add_new_user_fields.sql  0006_Add_collection_sample_notes_table.sql  0007_change_generic_column_names.sql  0008_rename_location_to_source_in_the_database.sql  20240118190834_Add_seedcollection_tables.sql  20240122032939_add_user_verification_table.sql  20240126051248_add_sample_view.sql  20240923162609_add_rank_to_vsamples.sql  20241006032405_Change_sample_quantity_to_floating_point.sql  20250116190018_Add_sample_history_table.sql  20250407203249_Add_user_prefs.sql  (+5 more)
dbmigration/: 1_initial_ITIS_database.sql
dbutil/: Cargo.toml
dbutil/src/: main.rs
deploy/: podman-kube.yaml  seedweb-config.yaml  seedweb-pod.yaml
libseed/: Cargo.toml
libseed/src/: collection.rs  database.rs  error.rs  filter.rs  lib.rs  loadable.rs  location.rs  note.rs  query.rs  sample.rs  source.rs  taxonomy.rs  user.rs
libseed/src/collection/: allocation.rs  mod.rs  note.rs
libseed/src/core/: database.rs  error.rs  loadable.rs  mod.rs  query.rs
libseed/src/project/: allocation.rs  mod.rs  note.rs
libseed/src/user/: preferences.rs  verification.rs
seedctl/: Cargo.toml
seedctl/src/: cli.rs  config.rs  main.rs  prompt.rs  table.rs
seedctl/src/commands/: admin.rs  mod.rs  projects.rs  samples.rs  sources.rs
seedctl/src/commands/admin/: database.rs  germination.rs  mod.rs  user.rs
seedctl/src/output/: csv.rs  json.rs  mod.rs  rows.rs  table.rs  yaml.rs
seedweb/: Cargo.toml
seedweb/src/: api.rs  collection.rs  db.rs  error.rs  html.rs  location.rs  main.rs  sample.rs  state.rs  taxonomy.rs
seedweb/src/api/: collection.rs  location.rs  sample.rs  taxonomy.rs
seedweb/src/html/: collection.rs  location.rs  sample.rs  taxonomy.rs
seedweb/src/html/static/: base.css
seedweb/src/html/templates/: _app_collection_$id.html  _app_collection_list.html  _app_sample_$id.html  _app_sample_list.html  _app_taxonomy_$id.html  collection_$id.html  collection_$id_sample_$sampleid_remove.html  collection_list.html  location_$id.html  location_list.html  root.html  sample_$id.html  sample_list.html  sample_new.html  taxonomy_$id.html  taxonomy_list.html  taxonomy_quickfind.html
src/: collection.rs  location.rs  main.rs  sample.rs  taxonomy.rs
web/: Cargo.toml
web/src/: api.rs  auth.rs  config.rs  email.rs  error.rs  html.rs  main.rs  state.rs  util.rs
web/src/api/: collection.rs  location.rs  mod.rs  project.rs  sample.rs  source.rs  taxonomy.rs
web/src/html/: allocation.rs  auth.rs  collection.rs  info.rs  location.rs  mod.rs  project.rs  sample.rs  source.rs  taxonomy.rs  user.rs
web/src/html/static/: base.css
web/src/html/templates/: _INDEX.html  _macros.html  auth_login.html  auth_login.html.partial  auth_logout.html  auth_register.html  collection_$id.html  collection_$id.html.partial  collection_$id_add.html  collection_$id_add.html.partial  collection_.html  collection_list.html  location_$id.html  location_.html  location_list.html  location_list_options.html  location_new.html  location_new.html.partial  location_new_modal.html  root.html  sample_$id.html  sample_$id_edit.html  sample_.html  sample_list.html  sample_new.html  sample_new.html.partial  taxonomy_$id.html  taxonomy_$id_samples.html  taxonomy_.html  taxonomy_editgerm.html  taxonomy_list.html  taxonomy_quickfind.html  taxonomy_search.html
web/src/html/tests/: allocation.rs  mod.rs  project.rs  sample.rs
web/static/: base.css
web/static/js/: vendor
web/templates/: _ALERT.html  _ALERT.html.j2  _ERROR.html  _ERROR.html.j2  _INDEX.html  _INDEX.html.j2  _auth_macros.html  _auth_macros.html.j2  _collection_macros.html  _flash_messages.html.j2  _location_macros.html  _macros.html  _macros.html.j2  _project_macros.html  _project_macros.html.j2  _sample_macros.html  _sample_macros.html.j2  _source_macros.html  _source_macros.html.j2  auth_login-POST.html  auth_login-POST.html.j2  auth_login.html  auth_login.html.j2  auth_logout.html  auth_logout.html.j2  auth_register-POST.html.j2  auth_register.html.j2  auth_verify-POST.html  auth_verify.html  auth_verify_{key}.html  auth_verify_{key}.html.j2  auth_verify_{userid}_{key}.html.j2  collection_$id-DELETE.html  collection_$id-PUT.html  collection_$id.html  collection_$id_add-POST.html  collection_$id_add.html  collection_$id_edit.html  collection_$id_filter.html  collection_$id_sample_$alloc.html  (+125 more)
web/vendor-js/: package.json
(+6 files in other folders)
