[package]
name = "seedcollection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
sqlx = { version = "0.7.3", features = [ "sqlite", "runtime-tokio" ] }
strum = "0.25.0"
strum_macros = "0.25.3"
tabled = "0.14.0"
tokio = { version = "1.34.0", features = [ "full" ] }
