[workspace]
members = ["libseed", "seedctl", "web"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.84"
clap = { version = "4.4.11", features = ["derive"] }
directories = "6"
libseed = { path = "./libseed", version = "0.1.0" }
serde = { version = "1.0.203", features = ["serde_derive"] }
sqlx = { version = "0.8.2", features = [ "sqlite", "runtime-tokio" ] }
strum = "0.27.0"
strum_macros = "0.27.0"
thiserror = "2"
time = { version = "0.3.31", features = ["formatting", "serde"] }
tokio = { version = "1.34.0", features = [ "full" ] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
