[package]
name = "libseed"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# shared workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, features = [ "sqlite", "runtime-tokio", "time" ] }
strum_macros = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["local-offset", "parsing"] }
tokio = { workspace = true }
tracing = { workspace = true }

# local dependencies
argon2 = "0.5.2"
password-hash = { version = "0.5.0", features = ["std", "getrandom"] }
rand = "0.8.5"
sqlparser = "0.57.0"

[dev-dependencies]
test-log = "0.2.14"
tracing-subscriber = { workspace = true }
