[package]
name = "seedctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
sqlx = { version = "0.7.3", features = [ "sqlite", "runtime-tokio", "time" ] }
tabled = "0.15.0"
tokio = { version = "1.34.0", features = [ "full" ] }

# local deps
libseed.workspace = true
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.118"
xdg = "2.5.2"
inquire = { version = "0.7.5", features = ["editor"] }
password-hash = "0.5.0"
futures = "0.3.30"
thiserror = "1.0.63"
csv = "1.3.0"
serde_yaml = "0.9.34"
