[package]
name = "seedctl"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# shared workspace dependencies
anyhow = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
libseed = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }

# local dependencies
csv = "1.3.0"
futures = "0.3.30"
inquire = { version = "0.7.5", features = ["editor"] }
password-hash = "0.5.0"
serde_json = "1.0.118"
serde_yaml = "0.9.34"
tabled = "0.18.0"
reqwest = { version = "0.12.12", features = ["stream"] }
zip = "2.2.2"
tempfile = "3.15.0"
indicatif = "0.17.11"
