[package]
name = "seedctl"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# shared workspace dependencies
anyhow = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
libseed = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }

# local dependencies
csv = "1.3.0"
inquire = { version = "0.9.1", features = ["editor"] }
password-hash = "0.5.0"
serde_json = "1.0.118"
serde_yaml = "0.9.34"
tabled = "0.20.0"
reqwest = { version = "0.12.12", features = ["stream"] }
zip = "5.1.0"
tempfile = "3.15.0"
indicatif = "0.18.0"
clap_complete = "4.5.50"
