[package]
name = "seedweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.34.0", features = [ "full" ] }
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["serde_derive"] }
sqlx = { version = "0.7.3", features = [ "sqlite", "runtime-tokio" ] }

# local deps
libseed.workspace = true
