[package]
name = "seedweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["serde_derive"] }
sqlx = { version = "0.7.3", features = [ "sqlite", "runtime-tokio" ] }
tokio = { version = "1.34.0", features = [ "full" ] }

# local deps
libseed.workspace = true
strum = "0.25.0"
axum-template = { version = "2.0.0", features = ["minijinja"] }
minijinja = { version = "1.0.10", features = ["loader"] }
