[package]
name = "seedweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local deps
libseed.workspace = true

anyhow = "1.0.75"
axum = { version = "0.7.2", features = ["macros"] }
axum-login = "0.15.0"
axum-template = { version = "2.3.0", features = ["minijinja"] }
clap = { version = "4.4.11", features = ["derive"] }
minijinja = { version = "2.0.3", features = ["loader"] }
serde = { version = "1.0.193", features = ["serde_derive"] }
sqlx = { version = "0.7.3", features = [ "sqlite", "runtime-tokio" ] }
strum = "0.26.0"
thiserror = "1.0.52"
time = { version = "0.3.31", features = ["formatting", "serde"] }
tokio = { version = "1.34.0", features = [ "full" ] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "trace", "request-id", "util"] }
tower-sessions = "0.12.0"
tower-sessions-sqlx-store = { version = "0.12.0", features = ["sqlite"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum-server = { version = "0.7.0", features = ["tls-rustls"] }
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.30"
minijinja-contrib = { version = "2.0.3", features = ["datetime"] }
pulldown-cmark = "0.12.0"
rand = "0.8.5"
lettre = { version = "0.11.3", features = ["serde", "tracing", "sendmail-transport", "file-transport", "tokio1", "tokio1-native-tls"] }
uuid = { version = "1.7.0", features = ["v4"] }
xdg = "2.5.2"

[dev-dependencies]
http-body-util = "0.1.0"
serde_urlencoded = "0.7.1"
test-log = "0.2.14"
