[package]
name = "seedweb"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# shared workspace deps
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
libseed = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
directories = { workspace = true }

# local dependencies
# switch from git branch to 0.17 when it is released
axum-extra = { version = "0.10.0", features=["query"]}
axum-login = "0.17.0"
axum-server = { version = "0.7.0", features = ["tls-rustls"] }
axum-template = { version = "3.0", features = ["minijinja"] }
axum = { version = "0.8", features = ["macros"] }
lettre = { version = "0.11.3", features = ["serde", "tracing", "sendmail-transport", "file-transport", "tokio1", "tokio1-native-tls"] }
minijinja-contrib = { version = "2.6.0", features = ["datetime"] }
minijinja = { version = "2.6.0", features = ["loader"] }
pulldown-cmark = "0.13.0"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.30"
signal-hook = "0.3.17"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "request-id", "util"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"]}
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1.0"
serde_urlencoded = "0.7.1"
test-log = "0.2.14"
